# prechelt-phone-number-encoding

./: .gitignore  README.md  benchmark-english-dict.sh  benchmark.sh  build.lisp  dictionary.txt  download_english_words.sh  input.txt  output.txt  words-quarter.txt
lisp/: main.lisp
log-config/: jul-logback.properties  jul.properties  log4j2.xml  logback.xml
src/: CleanupWords.java  GeneratePhoneNumbers.java  Main.java  OutputChecker.java
src/c/: phone_encoder.c  vector.c  vector.h  word_tree.c  word_tree.h
src/d/: dub.sdl
src/go/: go.mod  main.go  phoneencoder.go  solutioncounter.go  solutionprinter.go  wordtree.go
src/haskell/: colin_horne.hs  john_hamilton.hs
src/java/: CleanupWords.java  Faster.java  GeneratePhoneNumbers.java  LineCount.java  Main.java  Main2.java  MainFaster.java  MyMain.java  MyMain2.java  OutputChecker.java
src/julia/: phone_encoder.jl
src/lisp/: build.lisp  count_chars.lisp  count_lengths.lisp  find_words_larger_than.lisp  main-bpecsek.lisp  main-original.lisp  main.lisp  make_words_longer.lisp  take_half_the_lines.lisp
src/lua/: main.lua
src/nim/: .gitignore  nim_phone_encoder.nim
src/python/: programming_challenge.py
src/rust/phone_encoder/: Cargo.toml  pgo.sh
src/rust/phone_encoder/benches/: bench1.rs
src/rust/phone_encoder/src/: lib.rs  main.rs
src/rust/plotter/: Cargo.toml
src/rust/plotter/src/: main.rs
tests/: InterleavingDigitsAndWordsOfSameLengthPrinterFilterTest.java  PhoneNumberCleanerTest.java  PhoneNumberEncoderTest.java  TrieTest.java  WordsInputCleanerTest.java  numbers.txt  words.txt
(+19 files in other folders)
