[package]
name = "phone_encoder"
version = "0.1.0"
edition = "2018"
authors = ["Renato Athaydes <renato@athaydes.com>"]
license = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = "1.13.0"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "bench1"
harness = false